--- a/funcam_tester3.ipynb
+++ b/funcam_tester3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,11 +21,11 @@
     "\n",
     "\n",
     "#CHANGE TO FALSE TO NOT SHOW VIDEO\n",
-    "showvideo=False\n",
+    "showvideo=True\n",
     "\n",
     "\n",
     "#TEST VERSION\n",
-    "testing=True\n",
+    "testing=False\n",
     "\n",
     "\n",
     "\n",
@@ -885,6 +885,34 @@
     "    resultimage[:,:,2]=((distances[:,:])*frame5[:,:,2])+((1-distances[:,:])*alternate_background[:,:,2])\n",
     "    return(resultimage)\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#Color Key v2\n",
+    "def ColorKeyv3(frame4):\n",
+    "    #shape of frame\n",
+    "    width, height, channels = frame4.shape\n",
+    "    alternate_background0= cv2.imread(\"tests/vitaliy-gavrushchenko-fJQSCxB18wE-unsplash-3.jpg\")\n",
+    "    alternate_background= alternate_background0[0:width,0:height]\n",
+    "    \n",
+    "    #array that returns the result\n",
+    "    resultimage= np.zeros((width,height,3), np.uint8)\n",
+    "    \n",
+    "    color_key1=np.array([50,150,50])\n",
+    "    color_key2=np.array([150,255,150])\n",
+    "    \n",
+    "    distances = cv2.inRange(frame4, color_key1, color_key2)\n",
+    "    distances=1-distances\n",
+    "    \n",
+    "    resultimage[:,:,0]=((distances[:,:])*frame4[:,:,0])+((1-distances[:,:])*alternate_background[:,:,0])\n",
+    "    resultimage[:,:,1]=((distances[:,:])*frame4[:,:,1])+((1-distances[:,:])*alternate_background[:,:,1])\n",
+    "    resultimage[:,:,2]=((distances[:,:])*frame4[:,:,2])+((1-distances[:,:])*alternate_background[:,:,2])\n",
+    "    return(resultimage)\n",
+    "\n",
+    "\n",
+    "\n",
     "#Luma Key 1------------------------------------------------------------------------------------\n",
     "#source:  https://en.wikipedia.org/wiki/Smoothstep\n",
     "def smoothstepv1(luminance):\n",
@@ -1054,6 +1082,7 @@
     "    #frame4=Chromav3(frame4,150)\n",
     "    #frame4=ColorKey(frame4,189,200)\n",
     "    #frame4=ColorKeyv2(frame4)\n",
+    "    frame4=ColorKeyv3(frame4)\n",
     "    #frame4=LumaKey(frame4,100,180,10,10)\n",
     "    #frame4=LumaKeyv2(frame4,220)\n",
     "    #frame4=LumaKeyv3(frame4,245)\n",
@@ -2624,28 +2653,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The ideal result for the Chromav1aTest method is 54.11016962163042 on index 102\n"
+      "The ideal result for the Chromav1a method is 46.728013201645034 on index 110 250\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-5-8547f7003a0f>:229: RuntimeWarning: invalid value encountered in long_scalars\n",
-      "  trimap= np.where(((distances-threshold1)/(threshold2/threshold1))<=0,0, np.where(((distances-threshold1)/(threshold2/threshold1))>=1,1, 0.5))\n",
-      "<ipython-input-5-8547f7003a0f>:231: RuntimeWarning: invalid value encountered in long_scalars\n",
-      "  distances= np.where(((distances-threshold1)/(threshold2/threshold1))<=0,0, np.where(((distances-threshold1)/(threshold2/threshold1))>=1,1, 0.5))\n",
-      "<ipython-input-5-8547f7003a0f>:229: RuntimeWarning: divide by zero encountered in long_scalars\n",
-      "  trimap= np.where(((distances-threshold1)/(threshold2/threshold1))<=0,0, np.where(((distances-threshold1)/(threshold2/threshold1))>=1,1, 0.5))\n",
-      "<ipython-input-5-8547f7003a0f>:231: RuntimeWarning: divide by zero encountered in long_scalars\n",
-      "  distances= np.where(((distances-threshold1)/(threshold2/threshold1))<=0,0, np.where(((distances-threshold1)/(threshold2/threshold1))>=1,1, 0.5))\n"
+     "ename": "ValueError",
+     "evalue": "could not broadcast input array from shape (1920,1356) into shape (640,480)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-105465663bf2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    184\u001b[0m \u001b[1;31m#TestFunction2Var(ChromaKeyPlusDespillv2,False)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    185\u001b[0m \u001b[0mTestFunction2Var\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mChromav1a\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 186\u001b[1;33m \u001b[0mTestFunction1Var\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mChromav1b\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    187\u001b[0m \u001b[0mTestFunction1Var\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mChromav2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    188\u001b[0m \u001b[0mTestFunction1Var\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mChromav3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-19-105465663bf2>\u001b[0m in \u001b[0;36mTestFunction1Var\u001b[1;34m(functionname, showprocess)\u001b[0m\n\u001b[0;32m     73\u001b[0m             \u001b[1;31m#show original frame\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m             \u001b[1;31m#cv2.imshow('original',frame4)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 75\u001b[1;33m             \u001b[0mframe5\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfunctionname\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     76\u001b[0m             \u001b[0mdif\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe5\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     77\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mshowprocess\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-17-8547f7003a0f>\u001b[0m in \u001b[0;36mChromav1b\u001b[1;34m(frame4, threshold1)\u001b[0m\n\u001b[0;32m    579\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    580\u001b[0m     \u001b[1;31m#make mask of current frame and of the mean of all previous frames\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 581\u001b[1;33m     \u001b[0mmask1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmakemask\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mthreshold1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    582\u001b[0m     \u001b[0mmask2\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmakemask\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmeanimage\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mthreshold1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    583\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-17-8547f7003a0f>\u001b[0m in \u001b[0;36mmakemask\u001b[1;34m(frame4, threshold1)\u001b[0m\n\u001b[0;32m    618\u001b[0m     \u001b[1;31m#copy u and v chanel for calculating distance outside of uint8\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    619\u001b[0m     \u001b[0myuv_u\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwidth\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mheight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 620\u001b[1;33m     \u001b[0myuv_u\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0myuv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    621\u001b[0m     \u001b[0myuv_v\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwidth\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mheight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    622\u001b[0m     \u001b[0myuv_v\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0myuv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (1920,1356) into shape (640,480)"
      ]
     }
    ],
@@ -2698,7 +2727,7 @@
     "    \n",
     "    idealresult=255\n",
     "    indealthreshold=1000\n",
-    "    for x in np.arange(0,255):\n",
+    "    for x in np.arange(0,255,5):\n",
     "        dif=0\n",
     "        if (showprocess):\n",
     "            plt.title(\"Threshold:\"+ str(x))\n",
@@ -2738,7 +2767,7 @@
     "                idealresult=dif\n",
     "                idealthreshold=x      \n",
     "        \n",
-    "    print(\"The ideal result for the \" + keyingmethod.__name__+\" method is \"+ str(idealresult)+ \" on index \"+str(idealthreshold))\n",
+    "    print(\"The ideal result for the \" + functionname.__name__+\" method is \"+ str(idealresult)+ \" on index \"+str(idealthreshold))\n",
     "    \n",
     "    \n",
     "\n",
@@ -2780,8 +2809,8 @@
     "    idealresult=255\n",
     "    idealthresholdx=1000\n",
     "    idealthresholdy=1000\n",
-    "    for x in np.arange(0,255):\n",
-    "        for y in np.arange(x,255):\n",
+    "    for x in np.arange(0,255,5):\n",
+    "        for y in np.arange(x,255,5):\n",
     "            dif=0\n",
     "            if (showprocess):\n",
     "                plt.title(\"Threshold-min:\"+ str(x)+ \"Threshold-max8\"+str(y))\n",
@@ -2829,15 +2858,15 @@
     "\n",
     "    \n",
     "\n",
-    "    print(\"The ideal result for the \" + keyingmethod.__name__+\" method is \"+ str(idealresult)+ \" on index \"+str(idealthrsholdx)+\" \"+str(idealthresholdy))\n",
+    "    print(\"The ideal result for the \" + functionname.__name__+\" method is \"+ str(idealresult)+ \" on index \"+str(idealthresholdx)+\" \"+str(idealthresholdy))\n",
     "    \n",
-    "TestFunction1Var(ChromaKeyVlahosv1,False)\n",
-    "TestFunction2Var(ChromaKeyPlusDespill,False)\n",
-    "TestFunction2Var(ChromaKeyPlusDespillv2,False)\n",
-    "TestFunction2Var(ChromaKeyv1a,False)\n",
-    "TestFunction1Var(ChromaKeyv1b,False)\n",
-    "TestFunction1Var(ChromaKeyv2,False)\n",
-    "TestFunction1Var(ChromaKeyv3,False)\n",
+    "#TestFunction1Var(ChromaKeyVlahosv1,False)\n",
+    "#TestFunction2Var(ChromaKeyPlusDespill,False)\n",
+    "#TestFunction2Var(ChromaKeyPlusDespillv2,False)\n",
+    "TestFunction2Var(Chromav1a,False)\n",
+    "TestFunction1Var(Chromav1b,False)\n",
+    "TestFunction1Var(Chromav2,False)\n",
+    "TestFunction1Var(Chromav3,False)\n",
     "TestFunction2Var(ColorKey,False)\n",
     "TestFunction1Var(LumaKeyv2,False)\n",
     "TestFunction1Var(LumaKeyv3,False)\n",
@@ -2887,5 +2916,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4a
+ "nbformat_minor": 4
 }
